strong password added

--- a/index.html
+++ b/index.html
@@ -38,9 +38,15 @@
         <input type="text" placeholder="Mail" required id="mail" />
       </div>
 
-      <button type="submit">Submit</button>
-
+      <div>
+        <i class="fa-solid fa-lock"></i>
+        <input type="password" placeholder="Password" required id="password" />
+        <p id="msg"></p>
+      </div>
       <p id="error"></p>
+
+      <button type="submit" id="submitBtn">Submit</button>
+
     </form>
     <script src="./script.js"></script>
   </body>
